fix vertical align for Log Out button (English font problem)

--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -156,6 +156,8 @@ header::after {
         color: #2f7af9;
         border: #2f7af9 1px solid;
         background-color: white;
+        padding-top: 4px;
+        padding-bottom: 8px;
       }
     }
   }
